ヘッダーざっくりコーディング

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
   <title>SAMPLE</title>
   <meta name="description" content="SAMPLE" />
-  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/common.css">
 </head>
 <body>
 <!--#include virtual="/assets/include/_header.html" -->
@@ -23,7 +23,6 @@
     </section>
   </section>
 </main>
-<!--#include virtual="/assets/include/_footer.html" -->
 <script type="text/javascript" src="/assets/js/common.js"></script>
 </body>
 </html>
