--- a/06-1.html
+++ b/06-1.html
@@ -6,7 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>SAMPLE</title>
     <meta name="description" content="SAMPLE" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/common.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/common.css">
 </head>
 <body>
 <!--#include virtual="/assets/include/_header.html" -->
@@ -40,115 +40,102 @@
             </form>
         </div>
 
-            <section class="section">
-                            <h3 class="title">添付文書</h3>
-                <ul class="modDList02">
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+        <section class="section">
+            <h3 class="modHeadingLv3">医療用医薬品</h3>
+            <ul class="modDList03">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">神経系及び感覚器官用医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">個々の器官系用医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">代謝性医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                </ul>
-                <ul class="modDList02">
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">組織細胞機能用医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">生薬及び漢方処方に基づく医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">病原生物に対する医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">治療を主目的としない医薬品</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
+                                <div class="body__cate">
+                                    <div class="body__cate__inner">
+                                        <button class="btn btn--cateTxt">麻薬</button>
                                     </div>
                                 </div>
                             </div>
                         </section>
                     </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
+                    <li class="modDList03__item">
+                        <section class="modDList03__item__inner">
                             <div class="body">
-                                <div class="body__field">
-                                    <div class="body__field__inner">
-                                        <button class="btn btn--delete"></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
-                    </li>
-                    <li class="modDList02__item">
-                        <section class="modDList02__item__inner">
-                            <div class="body">
-                                <div class="body__field body__field--upLoad">
-                                    <div class="body__field__inner">
+                                <div class="body__cate body__cate--upLoad">
+                                    <div class="body__cate__inner">
                                         <label class="btn btn--upLoad"><input type="file" id="" name="" accept=""></label>
                                     </div>
                                 </div>
@@ -156,7 +143,7 @@
                         </section>
                     </li>
                 </ul>
-            </section>
+        </section>
     </div>
 </main>
 <script type="text/javascript" src="/assets/js/common.js"></script>
