--- a/06-1.html
+++ b/06-1.html
@@ -48,7 +48,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">神経系及び感覚器官用医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">神経系及び感覚器官用医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -59,7 +59,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">個々の器官系用医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">個々の器官系用医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -70,7 +70,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">代謝性医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">代謝性医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +81,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">組織細胞機能用医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">組織細胞機能用医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -92,7 +92,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">生薬及び漢方処方に基づく医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">生薬及び漢方処方に基づく医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -103,7 +103,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">病原生物に対する医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">病原生物に対する医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">治療を主目的としない医薬品</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">治療を主目的としない医薬品</a>
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                             <div class="body">
                                 <div class="body__cate">
                                     <div class="body__cate__inner">
-                                        <button class="btn btn--cateTxt">麻薬</button>
+                                        <a href="DUMMY" class="btn btn--cateTit">麻薬</a>
                                     </div>
                                 </div>
                             </div>
@@ -143,6 +143,9 @@
                         </section>
                     </li>
                 </ul>
+                <div class="">
+                    
+                </div>
         </section>
     </div>
 </main>
