--- a/06-2.html
+++ b/06-2.html
@@ -151,8 +151,8 @@
                         </section>
                     </li>
                 </ul>
-                <div class="">
-                    
+                <div class="modBtn--backBtn">
+                    <a href="DUMMY" class="btn--pageback">前のボタンに戻る</a>
                 </div>
         </section>
     </div>
