インデント調整等

--- a/22-2.html
+++ b/22-2.html
@@ -31,7 +31,7 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">担当者名</h3>
                                 <div class="body">
-                                    <span class="input"><input type="text" class="modFormInput"></span>
+                                    <input type="text" class="modFormInput">
                                 </div>
                             </section>
                         </li>
@@ -39,9 +39,9 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">ステータス</h3>
                                 <div class="body">
-									          <span class="select"><select>
-												      <option value="在職">在職</option>
-												  </select></span>
+                                              <span class="select"><select>
+                                                      <option value="在職">在職</option>
+                                                  </select></span>
                                 </div>
                             </section>
                         </li>
@@ -59,9 +59,9 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">権限</h3>
                                 <div class="body">
-									          <span class="select"><select>
-												      <option value="管理者">管理者</option>
-												  </select></span>
+                                    <span class="select"><select>
+                                        <option value="管理者">管理者</option>
+                                    </select></span>
                                 </div>
                             </section>
                         </li>
