[20-2]管理画面　お問い合わせ詳細　[20-3]管理画面　お問い合わせ詳細編集

--- a/20-3.html
+++ b/20-3.html
@@ -58,11 +58,7 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">お問い合わせ内容</h3>
                                 <div class="body">
-                                    <p>あたりテキストあたりテキストあたりテキストあたりテキ
-ストあたりテキストあたりテキストあたりテキストあたり
-テキストあたりテキストあたりテキストあたりテキストあ
-たりテキストあたりテキストあたりテキストあたりテキス
-トあたりテキストあたりテキスト</p>
+                                    <p>あたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキスト</p>
                                 </div>
                             </section>
                         </li>
@@ -72,7 +68,7 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">申請ステータス</h3>
                                 <div class="body">
-                                    <span class="select"><select>
+                                    <span class="modFormSelect"><select>
                                         <option value="未返信">未返信</option>
                                     </select><i class="modIconSelect"></i></span>
                                 </div>
