--- a/20-2.html
+++ b/20-2.html
@@ -58,11 +58,7 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">お問い合わせ内容</h3>
                                 <div class="body">
-                                    <p>あたりテキストあたりテキストあたりテキストあたりテキ
-ストあたりテキストあたりテキストあたりテキストあたり
-テキストあたりテキストあたりテキストあたりテキストあ
-たりテキストあたりテキストあたりテキストあたりテキス
-トあたりテキストあたりテキスト</p>
+                                    <p>あたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキストあたりテキスト</p>
                                 </div>
                             </section>
                         </li>
