--- a/07-1.html
+++ b/07-1.html
@@ -13,8 +13,15 @@
 <main class="main">
     <div class="contents">
         <h1 class="modHeadingLv1">商品タグ一覧</h1>
-			
-			
+        <div class="modFormSearch">
+            <form action="DUMMY" method="get">
+                <div class="searchForm">
+                    <input class="searchForm-input" type="text" placeholder="キーワードを入力">
+                    <button class="searchForm-submit" type="submit"></button>
+                </div>
+            </form>
+        </div>
+
         <h2 class="modHeadingLv2">◯◯◯◯◯のタグ一覧</h2>
         <div class="modSearchBox">
             <form action="DUMMY">
