--- a/06-2.html
+++ b/06-2.html
@@ -151,10 +151,10 @@
                         </section>
                     </li>
                 </ul>
-                <div class="modBtn--backBtn">
-                    <a href="DUMMY" class="btn--pageback">前のボタンに戻る</a>
-                </div>
-        </section>
+            </section>
+            <div class="modImgBtn modImgBtn--centerBtn">
+                <a href="DUMMY" class="btn btn--pageback">前のボタンに戻る</a>
+            </div>
     </div>
 </main>
 <script type="text/javascript" src="/assets/js/common.js"></script>
