--- a/07-1.html
+++ b/07-1.html
@@ -77,15 +77,15 @@
             </form>
         </div>
 
-    <form action="DUMMY">
-        <section class="section">
-            <div class="contents__top">
-                <h3 class="modHeadingLv3">タグ</h3>
-                <ul class="modBtnList">
-                    <li><button class="modBtn"><i class="modIconAdd"></i>新規登録</button></li>
-                </ul>
-            </div>
-            <ul class="modDList03">
+        <form action="DUMMY">
+            <section class="section">
+                <div class="contents__top">
+                    <h3 class="modHeadingLv3">タグ</h3>
+                    <ul class="modBtnList">
+                        <li><button class="modBtn"><i class="modIconAdd"></i>新規登録</button></li>
+                    </ul>
+                </div>
+                <ul class="modDList03">
                     <li class="modDList03__item__tag">
                         <section class="modDList03__item__inner">
                             <div class="body">
@@ -434,8 +434,8 @@
                         </section>
                     </li>
                 </ul>
-                <div class="modBtn--deleteBtn">
-                    <a href="DUMMY" class="btn--delete">前のボタンに戻る</a>
+                <div class="modImgBtn modImgBtn--deleteBtn">
+                    <a href="DUMMY" class="btn btn--delete">前のボタンに戻る</a>
                 </div>
             </section>
         </form>
