タブ調整しました

--- a/22-2.html
+++ b/22-2.html
@@ -39,9 +39,11 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">ステータス</h3>
                                 <div class="body">
-                                    <span class="select"><select>
-                                        <option value="在職">在職</option>
-                                    </select></span>
+                                    <span class="select">
+                                        <select>
+                                            <option value="在職">在職</option>
+                                        </select>
+                                    </span>
                                 </div>
                             </section>
                         </li>
@@ -59,9 +61,11 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">権限</h3>
                                 <div class="body">
-                                    <span class="select"><select>
-                                        <option value="管理者">管理者</option>
-                                    </select></span>
+                                    <span class="select">
+                                        <select>
+                                            <option value="管理者">管理者</option>
+                                        </select>
+                                    </span>
                                 </div>
                             </section>
                         </li>
