--- a/22-2.html
+++ b/22-2.html
@@ -39,8 +39,8 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">ステータス</h3>
                                 <div class="body">
-                                    <span class="select">
-                                        <select>
+                                    <span class="modFormSelect">
+                                        <select class="modFormSelect__l">
                                             <option value="在職">在職</option>
                                         </select>
                                     </span>
@@ -61,8 +61,8 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">権限</h3>
                                 <div class="body">
-                                    <span class="select">
-                                        <select>
+                                    <span class="modFormSelect">
+                                        <select class="modFormSelect__l">
                                             <option value="管理者">管理者</option>
                                         </select>
                                     </span>
