--- a/20-3.html
+++ b/20-3.html
@@ -68,9 +68,11 @@
                             <section class="modDList01__item__inner">
                                 <h3 class="title">申請ステータス</h3>
                                 <div class="body">
-                                    <span class="modFormSelect"><select>
-                                        <option value="未返信">未返信</option>
-                                    </select><i class="modIconSelect"></i></span>
+                                    <span class="modFormSelect">
+                                        <select class="modFormSelect__l">
+                                            <option value="未返信">未返信</option>
+                                        </select>
+                                    </span>
                                 </div>
                             </section>
                         </li>
